tests/errors/missing_mapped_net.nm
abstract component Foo {
    pin X: passive = 1;
    pin Y: passive = 2;
}

abstract component Main {
    net A, B;

    Foo {
        X: A;
        Y: B;
    }

    Foo {
        X: A;
        Y: C;
    }
}